tests/nstst/errors/Error.php
<?php
/**
 * @package axy\errors
 */

namespace axy\errors\tests\nstst\errors;

interface Error
{
}
